rasn-compiler-tests/tests/snapshots/nested_types__constraint_cross_reference.snap
---
source: rasn-compiler-tests/tests/nested_types.rs
description: " Test-Int ::= INTEGER (0..123723)\n        Wrapping-Int ::= Test-Int (0..value)\n        value Test-Int ::= 5"
---
Generated:
# [allow (non_camel_case_types , non_snake_case , non_upper_case_globals , unused , clippy :: too_many_arguments ,)] pub mod test_module { extern crate alloc ; use core :: borrow :: Borrow ; use std :: sync :: LazyLock ; use rasn :: prelude :: * ; # [derive (AsnType , Debug , Clone , Decode , Encode , PartialEq , Eq , Hash)] # [rasn (delegate , identifier = "Test-Int" , value ("0..=123723"))] pub struct TestInt (pub u32) ; # [derive (AsnType , Debug , Clone , Decode , Encode , PartialEq , Eq , Hash)] # [rasn (delegate , identifier = "Wrapping-Int" , value ("0..=5"))] pub struct WrappingInt (pub TestInt) ; pub const VALUE : TestInt = TestInt (5) ; }
