rasn-compiler-tests/tests/snapshots/nested_types__sequence.snap
---
source: rasn-compiler-tests/tests/nested_types.rs
description: " Test-Int ::= INTEGER (0..123723)\n        Wrapping-Int ::= Test-Int (0..123)\n        Test-Boolean ::= BOOLEAN\n        Wrapping-Boolean ::= Test-Boolean\n        Test-Sequence ::= SEQUENCE {\n            int Wrapping-Int DEFAULT 5,\n            boolean Wrapping-Boolean,\n        }\n        value Test-Sequence ::= { boolean TRUE }"
---
Generated:
# [allow (non_camel_case_types , non_snake_case , non_upper_case_globals , unused , clippy :: too_many_arguments ,)] pub mod test_module { extern crate alloc ; use core :: borrow :: Borrow ; use std :: sync :: LazyLock ; use rasn :: prelude :: * ; # [derive (AsnType , Debug , Clone , Decode , Encode , PartialEq , Eq , Hash , Copy)] # [rasn (delegate , identifier = "Test-Boolean")] pub struct TestBoolean (pub bool) ; # [derive (AsnType , Debug , Clone , Decode , Encode , PartialEq , Eq , Hash)] # [rasn (delegate , identifier = "Test-Int" , value ("0..=123723"))] pub struct TestInt (pub u32) ; # [derive (AsnType , Debug , Clone , Decode , Encode , PartialEq , Eq , Hash)] # [rasn (automatic_tags , identifier = "Test-Sequence")] pub struct TestSequence { # [rasn (default = "test_sequence_int_default")] pub int : WrappingInt , pub boolean : WrappingBoolean , } impl TestSequence { pub fn new (int : WrappingInt , boolean : WrappingBoolean) -> Self { Self { int , boolean } } } fn test_sequence_int_default () -> WrappingInt { WrappingInt (TestInt (5)) } # [derive (AsnType , Debug , Clone , Decode , Encode , PartialEq , Eq , Hash)] # [rasn (delegate , identifier = "Wrapping-Boolean")] pub struct WrappingBoolean (pub TestBoolean) ; # [derive (AsnType , Debug , Clone , Decode , Encode , PartialEq , Eq , Hash)] # [rasn (delegate , identifier = "Wrapping-Int" , value ("0..=123"))] pub struct WrappingInt (pub TestInt) ; pub static VALUE : LazyLock < TestSequence > = LazyLock :: new (|| TestSequence :: new (WrappingInt (TestInt (5)) , WrappingBoolean (TestBoolean (true)))) ; }
